# ScriptInterpreterInCpp

./: README.md  ast.dot  build.sh  main.cpp  struct.dot
ds_lang/: .clang-tidy  CMakeLists.txt
ds_lang/app/: main.cpp
ds_lang/include/: ast.hpp  ast_dot.hpp  bytecode.hpp  bytecode_builder.hpp  env.hpp  formatters.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token.hpp  types.hpp  util.hpp  vm.hpp
ds_lang/src/: ast_dot.cpp  bytecode_builder.cpp  env.cpp  formatters.cpp  interpreter.cpp  lexer.cpp  parser.cpp  token.cpp  util.cpp  vm.cpp
ds_lang/tests/: common.hpp  test_bytecode_builder.cpp  test_lexer.cpp  test_parser.cpp  test_util.cpp  test_vm.cpp
examples/: ast.dot  collatz.dot  complex.ds  func.ds  gcd.dot  gcd.ds  multi_type.ds  simple.dot  simple.ds  simple.ds2  struct.dot  struct.ds
